# nmea

./: CMakeLists.txt  nmeaConfig.cmake.in
include/nmea/object/: status.hpp
src/: sentence.cpp
